# evollm

./: .gitignore  Ejecutar_Simulacion.bat  LICENSE  README.md  algorithms.py  analyse_results.ipynb  common.py  create_strategies.py  environment.yml  fixed_tournament.py  games.py  gui.py  llm_agent.py  llm_strategies.py  main.py  moran_process.py  mypy.ini  pylintrc  pyproject.toml  rank_strategies.py  strategies.py  strategy.py  test.py  vs_human.py
results/: anthropic_default_matrices.txt  anthropic_gt_noise_matrices.txt  anthropic_gt_refine_matrices.txt  anthropic_prose_matrices.txt  anthropic_prose_noise_matrices.txt  anthropic_refine_noise_matrices.txt  openai_default_matrices.txt  openai_default_noise_matrices.txt  openai_gt_refine_noise_matrices.txt  openai_prose_matrices.txt  openai_prose_noise_matrices.txt  openai_refine_matrices.txt
save/: anthropic_1000_0.py  anthropic_1000_0v2.py  anthropic_1000_0v3.py  anthropic_1000_0v4.py  anthropic_20_0.py  anthropic_gt.py  anthropic_gt_noise.py  anthropic_gt_refine.py  anthropic_gt_refine2.py  anthropic_gt_refine_noise.py  anthropic_prose.py  anthropic_prose_noise.py  anthropic_with_robust.py  anthropic_with_robustv2.py  anthropic_without_robust.py  anthropic_without_robust_edited.py  openai_gt.py  openai_gt_noise.py  openai_gt_refine.py  openai_gt_refine2.py  openai_prose.py  openai_prose_noise.py
strategies/: anthropic_gt.py  anthropic_gt_noise.py  anthropic_gt_refine_noise.py  anthropic_prose.py  anthropic_prose_noise.py  anthropic_refine.py  openai_default.py  openai_gt_noise.py  openai_gt_refine.py  (+2 more)
(+7 files in other folders)
