[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-llm"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]
skip_gitignore = true

[tool.pylint.format]
max-line-length = 100

[tool.yapf]
based_on_style = "google"